--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
     <a href="http://localhost:8089/product.html">Click Here Add Product For Paticular Vendor</a>
+    <br>
+    <a href="http://localhost:8089/user.html">User Link</a>
   <h1>Vendors</h1>
 
   <input id="taskname" placeholder="task name">
