updated port changes

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
   <script src="vendorList.js"></script>
 </head>
 <body>
-    <a href="http://localhost:8089/product.html">Click Here Add Product For Paticular Vendor</a>
+ <button id="productButton">See Product</button>
     <br>
-    <a href="http://localhost:8089/user.html">User Link</a>
+    <button id="userLogin">User Login</button>
   <h1>Vendors</h1>
 
   <input id="taskname" placeholder="task name">
