--- a/public/CartPage.html
+++ b/public/CartPage.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <style>
+        .content {
+            max-width: 1000px;
+            margin: auto;
+        }
+    </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,7 +21,7 @@
   <script src="cartList.js"></script>
 </head>
 
-<body>
+<body class="content">
   <h1> Your Cart </h1>
   <table id="itemsAddedToCart" class="table table-bordered" >
     <tr class="thead-dark">
